--- a/assets/css/_card_member.scss
+++ b/assets/css/_card_member.scss
@@ -1,13 +1,13 @@
-.features-boxed{
+.user-box {
     color: #313437;
-    background-color: #fff;
+    background-color: #EEF4F7;
   }
   
-  .features-boxed p {
+  .user-box p {
     color: #7d8285;
   }
   
-  .features-boxed h2 {
+  .user-box h2 {
     font-weight: bold;
     margin-bottom: 40px;
     padding-top: 40px;
@@ -15,46 +15,46 @@
   }
   
   @media (max-width: 767px) {
-    .features-boxed h2 {
+    .user-box h2 {
       margin-bottom: 25px;
       padding-top: 25px;
       font-size: 24px;
     }
   }
   
-  .features-boxed .intro {
+  .user-box .intro {
     font-size: 16px;
     margin: 0 auto;
   }
   
-  .features-boxed .intro p {
+  .user-box .intro p {
     margin-bottom: 0;
 
   }
   
-  .features-boxed .features {
+  .user-box .features {
     padding: 50px 0;
   }
   
-  .features-boxed .item {
+  .user-box .item {
     text-align: center;
   }
   
-  .features-boxed .item .box {
+  .user-box .item .box {
     text-align: center;
     padding: 30px;
     background-color: #fff;
     margin-bottom: 30px;
   }
   
-  .features-boxed .item .icon {
+  .user-box .item .icon {
     font-size: 60px;
     color: #1485ee;
     margin-top: 20px;
     margin-bottom: 35px;
   }
   
-  .features-boxed .item .name {
+  .user-box .item .name {
     font-weight: bold;
     font-size: 18px;
     margin-bottom: 8px;
@@ -62,7 +62,7 @@
     color: inherit;
   }
   
-  .features-boxed .item .description {
+  .user-box .item .description {
     font-size: 15px;
     margin-top: 15px;
     margin-bottom: 20px;
